testcases/valid/while.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn test(x: i32)
    {
        while x > 0 as i32 {
            this.f += 1 as i32;
            x >>= 1;
        }
    }
}
