testcases/semantic_error/expressions2.shp

class Main<p1> where
    p1: [Main<p1>]
{
    f1: f32;

    fn test(): i32 {
        return f1 ^ f1;
    }
}
